feat: generated api stub using openapi